optimumnutrition.com (archived on 2017-04-15)
{
  "alexa_rank": 77525,
  "analysis_subcorpus": true,
  "categories": "shopping",
  "char_count": 6174,
  "classifier_probability": 0.96,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.63,
  "homepage_snapshot_redirected_domain": "optimumnutrition.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20170310221557id_/http://www.optimumnutrition.com/en_US/",
  "homepage_snapshot_url": "https://web.archive.org/web/20170313223121id_/http%3A//optimumnutrition.com",
  "interval": "2017_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "optimumnutrition.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170415145942id_/http%3A//www.optimumnutrition.com/en_US/privacy",
  "policy_title": "Optimum Nutrition | PRIVACY POLICY",
  "policy_url": "optimumnutrition.com/en_US/privacy",
  "sha1": "330723d7b1bf8b5933cc32b2b46f3d55fff243b0",
  "simhash": 11732808599847243659,
  "simhash_updated": false,
  "site_hostname": "optimumnutrition.com",
  "site_url": "http://optimumnutrition.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20170415145942",
  "word_count": 982,
  "year": 2017
}

--- a/o/op/opt/optimumnutrition.com.html
+++ b/o/op/opt/optimumnutrition.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the optimumnutrition.com privacy policy that was archived on 2016-12-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161230154400id_/http%3A//www.optimumnutrition.com/en_US/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the optimumnutrition.com privacy policy that was archived on 2017-04-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170415145942id_/http%3A//www.optimumnutrition.com/en_US/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en" style="" class=" video opacity placeholder supports no-touchevents cssanimations backgroundsize csstransforms csstransitions csstransforms3d"><!--<![endif]--><head>
     <meta charset="utf-8">
@@ -69,7 +69,7 @@
         <div id="nav-cont">
             <nav>
                 <!-- Left side of Nav bar -->
-                <ul class="left">                
+                <ul class="left">
                     <li class="nav-logo" data-dropdown="dropdown-on">
                         <a href="/"><span class="menuicon"></span>Optimum Nutrition</a>
                     </li>
@@ -82,6 +82,9 @@
                     <li class="yellow" data-dropdown="dropdown-health">
                         <a href="/en_US/categories/health-and-wellness">Health &amp;<br><b>Wellness</b></a>
                     </li>
+                    <li class="aquablue" data-dropdown="dropdown-apparel">
+                        <a href="/en_US/categories/apparel-and-accessories">Apparel &amp;<br><b>Accessories</b></a>
+                    </li>                                    
                 </ul>
 
                 <!-- Right side of Nav bar -->
@@ -252,7 +255,7 @@
                             <h5>Popular Products:</h5>
                             <div class="medium-12 large-6-1050 columns">
                                 <ol>
-                                    <li><a href="/en_US/products/pro-gainer/strength-and-recovery">PRO Gainer</a> <span class="price icon-arrow-right-before">$35.99</span></li><li><a href="/en_US/products/creatine-powder/strength-and-recovery">Creatine Powder</a> <span class="price icon-arrow-right-before">$35.99</span></li><li><a href="/en_US/products/serious-mass/strength-and-recovery">Serious Mass</a> <span class="price icon-arrow-right-before">$27.99</span></li><li><a href="/en_US/products/amino-energy/strength-and-recovery">Essential Amino Energy</a> <span class="price icon-arrow-right-before">$19.99</span></li><li><a href="/en_US/products/pro-bcaa/strength-and-recovery">Pro BCAA</a> <span class="price icon-arrow-right-before">$24.99</span></li>                                </ol>
+                                    <li><a href="/en_US/products/pro-gainer/strength-and-recovery">PRO Gainer</a> <span class="price icon-arrow-right-before">$35.99</span></li><li><a href="/en_US/products/creatine-powder/strength-and-recovery">Creatine Powder</a> <span class="price icon-arrow-right-before">$8.99</span></li><li><a href="/en_US/products/serious-mass/strength-and-recovery">Serious Mass</a> <span class="price icon-arrow-right-before">$27.99</span></li><li><a href="/en_US/products/amino-energy/strength-and-recovery">Essential Amino Energy</a> <span class="price icon-arrow-right-before">$19.99</span></li><li><a href="/en_US/products/pro-bcaa/strength-and-recovery">Pro BCAA</a> <span class="price icon-arrow-right-before">$24.99</span></li>                                </ol>
                             </div>
                             <!-- Popular product images -->
                             <div class="popular-products two-products medium-6 columns">
@@ -307,7 +310,7 @@
                             <h5>Popular Products:</h5>
                             <div class="medium-12 large-6-1050 columns">
                                 <ol>
-                                   <li><a href="/en_US/products/opti-men-multivitamin/health-and-wellness">Opti-Men Multivitamin</a> <span class="price icon-arrow-right-before">$19.99</span></li><li><a href="/en_US/products/opti-women-multivitamin/health-and-wellness">Opti-Women Multivitamin</a> <span class="price icon-arrow-right-before">$14.99</span></li><li><a href="/en_US/products/fish-oil/health-and-wellness">Enteric Coated Fish Oil Softgels</a> <span class="price icon-arrow-right-before">$12.99</span></li><li><a href="/en_US/products/cla-softgels/health-and-wellness">CLA Softgels</a> <span class="price icon-arrow-right-before">$26.99</span></li><li><a href="/en_US/products/fitness-fiber/health-and-wellness">Fitness Fiber</a> <span class="price icon-arrow-right-before">$9.99</span></li>                                </ol>
+                                   <li><a href="/en_US/products/opti-men-multivitamin/health-and-wellness">Opti-Men Multivitamin</a> <span class="price icon-arrow-right-before">$7.99</span></li><li><a href="/en_US/products/opti-women-multivitamin/health-and-wellness">Opti-Women Multivitamin</a> <span class="price icon-arrow-right-before">$14.99</span></li><li><a href="/en_US/products/fish-oil/health-and-wellness">Enteric Coated Fish Oil Softgels</a> <span class="price icon-arrow-right-before">$12.99</span></li><li><a href="/en_US/products/cla-softgels/health-and-wellness">CLA Softgels</a> <span class="price icon-arrow-right-before">$16.99</span></li><li><a href="/en_US/products/fitness-fiber/health-and-wellness">Fitness Fiber</a> <span class="price icon-arrow-right-before">$9.99</span></li>                                </ol>
                             </div>
                             <!-- Popular product images -->
                             <div class="popular-products two-products medium-6 columns">
@@ -322,7 +325,7 @@
                                 <b>Vitamin D</b><br>&amp; Sports<br>Performance<br>
                                 <span>Learn More</span>
                             </a>
-    
+
                             <a href="/en_US/news?id=fat-fighting-cla-calcium-combo" class="guides aquablue-bg">
                                 Fat Fighting<br>CLA + Calcium<br><b>Combo</b><br>
                                 <span>Learn More</span>
@@ -331,6 +334,63 @@
                     </div>
                 </div>
             </div>
+
+             <!-- Apparel and Accessories menu -->
+            <div id="dropdown-apparel" class="nav-dropdown" data-dropdown="dropdown-apparel">
+                <!-- Menu title -->
+                <div class="title-bar outer-gutter">
+                    <div class="row small-collapse medium-uncollapse">
+                        <div class="columns medium-12">
+                            <a href="/en_US/categories/apparel-and-accessories">Apparel &amp;<br><b>Accessories</b> <span class="icon-arrow-right-after">View All Products</span></a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Menu items -->
+                <div class="outer-gutter">
+                    <div class="row small-collapse medium-uncollapse">
+                        <!-- Links with color backgrounds -->
+                        <div class="columns medium-4 large-3-1050 categories">
+                            <h5>Categories:</h5>
+                            <ul>
+                                <li><a href="/en_US/categories/apparel-and-accessories/tops" class="tops">Tops</a></li>
+                                <li><a href="/en_US/categories/apparel-and-accessories/bottoms" class="bottoms">Bottoms</a></li>
+                                <li><a href="/en_US/categories/apparel-and-accessories/accessories" class="accessories">Accessories</a></li>
+                            </ul>
+                        </div>
+
+                        <!-- Ordered list links -->
+                        <div class="columns medium-4 large-6-1050 popular">
+                            <h5>Popular Products:</h5>
+                            <div class="medium-12 large-6-1050 columns">
+                                <ol>
+                                   <li><a href="/en_US/products/shaker-cup/apparel-and-accessories">Shaker Cup</a> <span class="price icon-arrow-right-before">$4.99</span></li><li><a href="/en_US/products/true-strength-t-shirt/apparel-and-accessories">True Strength T-Shirt</a> <span class="price icon-arrow-right-before">$24.99</span></li><li><a href="/en_US/products/mens-true-strength-tank-top/apparel-and-accessories">True Strength Tank Top</a> <span class="price icon-arrow-right-before">$27.99</span></li><li><a href="/en_US/products/true-strength-dry-fit-half-zip-jacket/apparel-and-accessories">True Strength Dry-Fit Half Zip Jacket</a> <span class="price icon-arrow-right-before">$59.99</span></li><li><a href="/en_US/products/30th-anniversary-shaker-cup/apparel-and-accessories">30th Anniversary Shaker Cup</a> <span class="price icon-arrow-right-before">$11.99</span></li>                                </ol>
+                            </div>
+                            <!-- Popular product images -->
+                            <div class="popular-products two-products medium-6 columns">
+                                <a href="/en_US/products/30th-anniversary-shaker-cup" class="optimen"><img src="/us/img/assets/30yearshaker.png" alt=""></a>
+                                <a href="/en_US/products/shaker-cup" class="cla"><img src="/us/img/assets/ONshakercup.png" alt=""></a>
+                            </div>
+                        </div>
+
+                        <!-- Large righthand guide buttons -->
+                        <div class="columns medium-4 large-3-1050 links">
+                            <a href="/en_US/categories/apparel-and-accessories/?methodIds=7" class="guides orange-bg">
+                                <b>Men's</b><br>Apparel<br><br>
+                                <span>Shop Now</span>
+                            </a>
+
+                            <a href="/en_US/categories/apparel-and-accessories/?methodIds=8" class="guides aquablue-bg">
+                                <b>Women's</b><br>Apparel<br><br>
+                                <span>Shop Now</span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+
 
             <!-- Optimum Nutrition menu -->
             <div id="dropdown-on" class="nav-dropdown" data-dropdown="dropdown-on">
@@ -348,7 +408,7 @@
                         <ul class="columns medium-5 left-links">
                             <li><a href="/en_US/athletes" class="icon icon-dumbbell">Athletes</a></li>
                             <li><a href="/en_US/events" class="icon icon-calendar">Events</a></li>
-                            <li><a href="/en_US/categories/gear-accessories" class="icon icon-tshirt">Gear</a></li>
+                            <li><a href="/en_US/categories/apparel-and-accessories" class="icon icon-tshirt">Apparel</a></li>
                             <li><a href="/en_US/news" class="icon icon-notice">News</a></li>
                             <li><a href="/en_US/videos" class="icon icon-tv">Videos</a></li>
                             <li><a href="/en_US/about" class="icon icon-help">About Us</a></li>
@@ -393,9 +453,11 @@
                         </select>
                     </div>
                 </div>
-            </div>  
+            </div>
         </div>
-    </div><div id="legal" class="container outer-gutter">
+    </div>
+
+<div id="legal" class="container outer-gutter">
     <!-- Headline Area -->
     <div class="row page-header">
         <div class="large-12 columns">
@@ -514,7 +576,7 @@
             </div>
             <div class="row">
                 <div class="links medium-12 columns">
-                    <h5>©2016 Optimum Nutrition, Inc</h5>
+                    <h5>©2016-2017 Optimum Nutrition, Inc</h5>
                     <ul>
                     	<li><a href="/en_US/contact">Contact Us</a></li>
                         <li><a href="/en_US/shipping">SHIPPING &amp; RETURNS</a></li>
