pcrisk.com (archived on 2017-04-15)
{
  "alexa_rank": 59779,
  "analysis_subcorpus": true,
  "categories": "business;informationtech",
  "char_count": 5259,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.94,
  "homepage_snapshot_redirected_domain": "pcrisk.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20170325194111id_/https://www.pcrisk.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20170325194111id_/http%3A//pcrisk.com",
  "interval": "2017_A",
  "link_text": "Privacy policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "pcrisk.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170415160652id_/https%3A//www.pcrisk.com/privacy-policy",
  "policy_title": "Privacy policy",
  "policy_url": "pcrisk.com/privacy-policy",
  "sha1": "014227e2f003b8c8e6f892359e1083eab13fd789",
  "simhash": 14725372975737405851,
  "simhash_updated": false,
  "site_hostname": "pcrisk.com",
  "site_url": "http://pcrisk.com",
  "smog": 14.02,
  "strict_updated": false,
  "timestamp": "20170415160652",
  "word_count": 834,
  "year": 2017
}

--- a/p/pc/pcr/pcrisk.com.html
+++ b/p/pc/pcr/pcrisk.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the pcrisk.com privacy policy that was archived on 2016-08-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20160806073248id_/https%3A//www.pcrisk.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the pcrisk.com privacy policy that was archived on 2017-04-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170415160652id_/https%3A//www.pcrisk.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-US" lang="en-US" dir="ltr" prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb#"><head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -52,7 +52,7 @@
 <nav class="nav_main">
 <div class="moduletable dropdown">
 <div class="content-module">
-<ul class="menu"><li class="item1"><a href="https://www.pcrisk.com/"><span>Home</span></a></li><li class="item57"><a href="/removal-guides"><span>Removal guides</span></a></li><li class="item5"><a href="/internet-threat-news"><span>News</span></a></li><li class="item96"><a href="https://www.pcrisk.com/computer-technician-blog"><span>Blog</span></a></li><li class="item7"><a href="https://forum.pcrisk.com"><span>Forum</span></a></li><li class="item2"><a href="/top-spyware-removers"><span>Top Anti-malware</span></a></li><li class="item94"><a href="/top-antivirus"><span>Top Antivirus 2016</span></a></li><li class="item102"><a href="http://scanner.pcrisk.com"><span>Website Scanner</span></a></li></ul> </div>
+<ul class="menu"><li class="item1"><a href="https://www.pcrisk.com/"><span>Home</span></a></li><li class="item57"><a href="/removal-guides"><span>Removal guides</span></a></li><li class="item5"><a href="/internet-threat-news"><span>News</span></a></li><li class="item96"><a href="https://www.pcrisk.com/computer-technician-blog"><span>Blog</span></a></li><li class="item7"><a href="https://forum.pcrisk.com"><span>Forum</span></a></li><li class="item2"><a href="/top-spyware-removers"><span>Top Anti-malware</span></a></li><li class="item94"><a href="/top-antivirus"><span>Top Antivirus 2017</span></a></li><li class="item102"><a href="http://scanner.pcrisk.com"><span>Website Scanner</span></a></li></ul> </div>
 </div>
 </nav>
 <div id="search">
@@ -110,50 +110,50 @@ Privacy policy</h1>
 <div class="content-module">
 <ul class="thmodul">
 <li class="thmodli">
-<a href="/removal-guides/10346-search-mynewswire-co-redirect" class="thmodlia">
+<a href="/removal-guides/11173-home-dimakadima-com-redirect" class="thmodlia">
 <div class="thmodmaindiv">
-<div class="thmodimgdiv"><img src="/images/thumbnails/small/th-10346-search-mynewswire-co-redirect.jpg" height="40" width="45" alt="Search.mynewswire.co Redirect"></div>
-<p>Search.mynewswire.co Redirect</p>
+<div class="thmodimgdiv"><img src="/images/thumbnails/small/th-11173-home-dimakadima-com-redirect.jpg" height="40" width="45" alt="Home.dimakadima.com Redirect"></div>
+<p>Home.dimakadima.com Redirect</p>
 </div>
 </a>
 </li>
 <li class="thmodli">
-<a href="/removal-guides/10345-search-gomaps-co-redirect" class="thmodlia">
+<a href="/removal-guides/11172-iconssliding-com-redirect" class="thmodlia">
 <div class="thmodmaindiv">
-<div class="thmodimgdiv"><img src="/images/thumbnails/small/th-10345-search-gomaps-co-redirect.jpg" height="40" width="45" alt="Search.gomaps.co Redirect"></div>
-<p>Search.gomaps.co Redirect</p>
+<div class="thmodimgdiv"><img src="/images/thumbnails/small/th-11172-iconssliding-com-redirect.jpg" height="40" width="45" alt="Iconssliding.com Redirect"></div>
+<p>Iconssliding.com Redirect</p>
 </div>
 </a>
 </li>
 <li class="thmodli">
-<a href="/removal-guides/10344-proxygate-adware" class="thmodlia">
+<a href="/removal-guides/11171-net-surf-adware" class="thmodlia">
 <div class="thmodmaindiv">
-<div class="thmodimgdiv"><img src="/images/thumbnails/small/th-10344-proxygate-adware.jpg" height="40" width="45" alt="ProxyGate Adware"></div>
-<p>ProxyGate Adware</p>
+<div class="thmodimgdiv"><img src="/images/thumbnails/small/th-11171-net-surf-adware.jpg" height="40" width="45" alt="Net Surf Adware"></div>
+<p>Net Surf Adware</p>
 </div>
 </a>
 </li>
 <li class="thmodli">
-<a href="/removal-guides/10343-pdfdefault-adware" class="thmodlia">
+<a href="/removal-guides/11170-searchlock-com-redirect" class="thmodlia">
 <div class="thmodmaindiv">
-<div class="thmodimgdiv"><img src="/images/thumbnails/small/th-10343-pdfdefault-adware.jpg" height="40" width="45" alt="PDFDEFAULT Adware"></div>
-<p>PDFDEFAULT Adware</p>
+<div class="thmodimgdiv"><img src="/images/thumbnails/small/th-11170-searchlock-com-redirect.jpg" height="40" width="45" alt="Searchlock.com Redirect"></div>
+<p>Searchlock.com Redirect</p>
 </div>
 </a>
 </li>
 <li class="thmodli">
-<a href="/removal-guides/10342-cerber2-ransomware" class="thmodlia">
+<a href="/removal-guides/11169-msil-ransomware" class="thmodlia">
 <div class="thmodmaindiv">
-<div class="thmodimgdiv"><img src="/images/thumbnails/small/th-10342-cerber2-ransomware.jpg" height="40" width="45" alt="Cerber2 Ransomware"></div>
-<p>Cerber2 Ransomware</p>
+<div class="thmodimgdiv"><img src="/images/thumbnails/small/th-11169-msil-ransomware.jpg" height="40" width="45" alt="MSIL Ransomware"></div>
+<p>MSIL Ransomware</p>
 </div>
 </a>
 </li>
 <li class="thmodli">
-<a href="/removal-guides/10340-my-webenhancer-adware-mac" class="thmodlia">
+<a href="/removal-guides/11168-navigate-pro-adware" class="thmodlia">
 <div class="thmodmaindiv">
-<div class="thmodimgdiv"><img src="/images/thumbnails/small/th-10340-my-webenhancer-adware-mac.jpg" height="40" width="45" alt="My WebEnhancer Adware (Mac)"></div>
-<p>My WebEnhancer Adware (Mac)</p>
+<div class="thmodimgdiv"><img src="/images/thumbnails/small/th-11168-navigate-pro-adware.jpg" height="40" width="45" alt="Navigate Pro Adware"></div>
+<p>Navigate Pro Adware</p>
 </div>
 </a>
 </li>
@@ -177,18 +177,18 @@ Privacy policy</h1>
 <div class="content-module">
 <ul class="thmodul">
 <li class="thmodli">
-<a href="/removal-guides/9842-cerber-ransomware" class="thmodlia">
+<a href="/removal-guides/10422-you-have-a-zeus-virus-scam" class="thmodlia">
 <div class="thmodmaindiv">
-<div class="thmodimgdiv"><img src="/images/thumbnails/small/th-9842-cerber-ransomware.jpg" height="40" width="45" alt="Cerber Ransomware [Updated]"></div>
-<p>Cerber Ransomware [Updated]</p>
+<div class="thmodimgdiv"><img src="/images/thumbnails/small/th-10422-you-have-a-zeus-virus-scam.jpg" height="40" width="45" alt="You Have A ZEUS Virus Scam"></div>
+<p>You Have A ZEUS Virus Scam</p>
 </div>
 </a>
 </li>
 <li class="thmodli">
-<a href="/removal-guides/8835-search-yahoo-com-redirect" class="thmodlia">
+<a href="/removal-guides/10071-your-computer-has-been-blocked-scam" class="thmodlia">
 <div class="thmodmaindiv">
-<div class="thmodimgdiv"><img src="/images/thumbnails/small/th-8835-search-yahoo-com-redirect.jpg" height="40" width="45" alt="Search.yahoo.com Redirect"></div>
-<p>Search.yahoo.com Redirect</p>
+<div class="thmodimgdiv"><img src="/images/thumbnails/small/th-10071-your-computer-has-been-blocked-scam.jpg" height="40" width="45" alt="YOUR COMPUTER HAS BEEN BLOCKED Scam"></div>
+<p>YOUR COMPUTER HAS BEEN BLOCKED Scam</p>
 </div>
 </a>
 </li>
@@ -201,26 +201,26 @@ Privacy policy</h1>
 </a>
 </li>
 <li class="thmodli">
-<a href="/removal-guides/9807-locky-ransomware" class="thmodlia">
+<a href="/removal-guides/9842-cerber-ransomware" class="thmodlia">
 <div class="thmodmaindiv">
-<div class="thmodimgdiv"><img src="/images/thumbnails/small/th-9807-locky-ransomware.jpg" height="40" width="45" alt="Locky Ransomware [Updated]"></div>
-<p>Locky Ransomware [Updated]</p>
+<div class="thmodimgdiv"><img src="/images/thumbnails/small/th-9842-cerber-ransomware.jpg" height="40" width="45" alt="Cerber Ransomware [Updated]"></div>
+<p>Cerber Ransomware [Updated]</p>
 </div>
 </a>
 </li>
 <li class="thmodli">
-<a href="/removal-guides/8167-dolphin-deals-adware" class="thmodlia">
+<a href="/removal-guides/11029-launchpage-org-redirect" class="thmodlia">
 <div class="thmodmaindiv">
-<div class="thmodimgdiv"><img src="/images/thumbnails/small/th-8167-dolphin-deals-adware.jpg" height="40" width="45" alt="Dolphin Deals Adware"></div>
-<p>Dolphin Deals Adware</p>
+<div class="thmodimgdiv"><img src="/images/thumbnails/small/th-11029-launchpage-org-redirect.jpg" height="40" width="45" alt="Launchpage.org Redirect"></div>
+<p>Launchpage.org Redirect</p>
 </div>
 </a>
 </li>
 <li class="thmodli">
-<a href="/removal-guides/8120-your-personal-files-are-encrypted-virus" class="thmodlia">
+<a href="/removal-guides/8835-search-yahoo-com-redirect" class="thmodlia">
 <div class="thmodmaindiv">
-<div class="thmodimgdiv"><img src="/images/thumbnails/small/th-8120-your-personal-files-are-encrypted-virus.jpg" height="40" width="45" alt="CTB-Locker Ransomware"></div>
-<p>CTB-Locker Ransomware</p>
+<div class="thmodimgdiv"><img src="/images/thumbnails/small/th-8835-search-yahoo-com-redirect.jpg" height="40" width="45" alt="Search.yahoo.com Redirect"></div>
+<p>Search.yahoo.com Redirect</p>
 </div>
 </a>
 </li>
@@ -242,20 +242,20 @@ Privacy policy</h1>
 <div class="content-module">
 <ul class="latestnewsgrey link">
 <li class="latestnewsgrey link">
-<a href="/internet-threat-news/10316-russians-hack-the-american-presidential-campaign" class="latestnewsgrey link">
-Russians Hack the American Presidential Campaign</a>
+<a href="/internet-threat-news/11144-threat-intelligence-feeds" class="latestnewsgrey link">
+Threat Intelligence Feeds</a>
 </li>
 <li class="latestnewsgrey link">
-<a href="/internet-threat-news/10272-ad-blockers-and-privacy" class="latestnewsgrey link">
-Ad Blockers and Privacy</a>
+<a href="/internet-threat-news/11126-rig-exploit-kit-spreads-ransomware" class="latestnewsgrey link">
+Rig Exploit Kit Spreads Ransomware</a>
 </li>
 <li class="latestnewsgrey link">
-<a href="/internet-threat-news/10240-whatsapp-encryption-explained" class="latestnewsgrey link">
-Whatsapp Encryption Explained</a>
+<a href="/internet-threat-news/11106-wikileaks-second-publication-reveals-cia-can-hack-iphone-and-mac-firmware" class="latestnewsgrey link">
+Wikileaks Second Publication Reveals CIA Can Hack iPhone and Mac Firmware</a>
 </li>
 <li class="latestnewsgrey link">
-<a href="/internet-threat-news/10214-facebook-rolls-out-encrypted-chat" class="latestnewsgrey link">
-Facebook Rolls Out Encrypted Chat</a>
+<a href="/internet-threat-news/11081-watering-hole-attacks" class="latestnewsgrey link">
+Watering Hole Attacks</a>
 </li>
 </ul> </div>
 </div>
@@ -300,7 +300,7 @@ How to remove a Google Chrome extension "Installed by enterprise policy"?</a>
 </nav>
 <div class="address">
 <div class="moduletable">
-<p style="text-align: center;">Copyright © 2007-2016 PCrisk.com. Any redistribution or reproduction of part or all of the contents in any form is prohibited.</p>
+<p style="text-align: center;">Copyright © 2007-2017 PCrisk.com. Any redistribution or reproduction of part or all of the contents in any form is prohibited.</p>
 <p style="text-align: center;"><a title="PCrisk.com privacy policy" href="/privacy-policy">Privacy policy</a> | <a title="Disclaimer" href="/site-disclaimer">Site Disclaimer</a> | <a title="Terms of use" href="/terms-of-use">Terms of use</a> | <a title="Contact us" href="/contact-us">Contact Us</a> | <a title="Search site" href="/search">Search this website</a></p> </div>
 </div>
 </footer>  
